--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
 	"name": "vite-react-ts-eslint-prettier",
 	"private": true,
 	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
@@ -38,7 +39,7 @@
 		"eslint-plugin-react": "^7.30.0",
 		"eslint-plugin-react-hooks": "^4.5.0",
 		"prettier": "2.5.1",
-		"typescript": "4.4.4",
+		"typescript": "^5.0.2",
 		"vite": "^2.9.9",
 		"vite-tsconfig-paths": "^3.5.0"
 	}
